--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -266,7 +266,7 @@ Our results and output were quite reasonable; however, we could not train the en
 
 
 
-<a href="figure13">Figure 13</a> shows a sample result of the generated images for both real and segmentation images.
+<a href="figure13">Figure 13</a> shows a sample result of the generated images for both real and segmentation images. Also you can check my Youtube video <a href="https://youtu.be/wXQPglO9ZTo">link</a> about this project.
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Final.PNG" width="80%" height="auto"  id="figure13" />
     <div class="caption" >Figure 13</div>
