--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Amin Fadaeinejad | Unpaired Image-to-Image Translation</title>
-  <meta name="description" content="This is the personal website of Otilia Stretcu">
+  <meta name="description" content="This is the personal website of Amin Fadaeinejad">
 
   <!-- Fonts and Icons -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons" />
@@ -244,12 +244,12 @@ Our results and output were quite reasonable; however, we could not train the en
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/GroundGood.PNG" width="75%" height="auto"  id="figure10" />
+    <img src="/assets/img/GroundGood.PNG" width="60%" height="auto"  id="figure10" />
     <div class="caption" >Figure 10</div>
 </div>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Seg1.PNG" width="75%" height="auto"  id="figure11" />
+    <img src="/assets/img/Seg1.PNG" width="60%" height="auto"  id="figure11" />
     <div class="caption" >Figure 11</div>
 </div>
 
