--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/assets/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/academicons.min.css">
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="/projects/2_livex/">
+  <!-- <link rel="canonical" href="/projects/2_livex/"> -->
 
 
 <style>
@@ -226,12 +226,12 @@ Our results and output were quite reasonable; however, we could not train the en
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/GroundGood1.PNG" width="75%" height="auto"  id="figure8" />
+    <img src="/assets/img/GroundGood1.PNG" width="60%" height="auto"  id="figure8" />
     <div class="caption" >Figure 8</div>
 </div>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/Seg2.PNG" width="75%" height="auto"  id="figure9" />
+    <img src="/assets/img/Seg2.PNG" width="60%" height="auto"  id="figure9" />
     <div class="caption" >Figure 9</div>
 </div>
 
