--- a/projects/Data Analytics/CitiBike/index.html
+++ b/projects/Data Analytics/CitiBike/index.html
@@ -9,7 +9,7 @@ h3 {text-align: center;}
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Amin Fadaeinejad | Citi Bike Analysis</title>
-  <meta name="description" content="This is the personal website of Otilia Stretcu">
+  <meta name="description" content="This is the personal website of Amin Fadaeinejad">
 
   <!-- Fonts and Icons -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons" />
@@ -18,7 +18,7 @@ h3 {text-align: center;}
   <link rel="stylesheet" href="/assets/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/academicons.min.css">
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="/projects/2_livex/">
+  <!-- <link rel="canonical" href="/projects/2_livex/"> -->
 </head>
 <body>
   <!-- Header -->
