--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Amin Fadaeinejad | Human joint Pose Estimator</title>
-  <meta name="description" content="This is the personal website of Otilia Stretcu">
+  <meta name="description" content="This is the personal website of Amin Fadaeinejad">
 
   <!-- Fonts and Icons -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:100,300,400,500,700|Material+Icons" />
@@ -14,7 +14,6 @@
   <link rel="stylesheet" href="/assets/css/all.min.css">
   <link rel="stylesheet" href="/assets/css/academicons.min.css">
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="/projects/2_livex/">
 
 
 <style>
