--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -98,7 +98,7 @@ table, th, td {
   <h1>Multi-Scale image segmentation</h1>
  
 
-
+<h2 id="more-information">Introduction</h2>
 
 <p> In data science, anomaly detection is when the system tries to detect a rare item, event or observation which deviates significantly from the original distribution and can not be defined as normal behaviour. Three different categories of anomaly detection exist:</p>
 
