--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -97,6 +97,9 @@ table, th, td {
     
   <h1>Multi-Scale image segmentation</h1>
  
+   <h4>Disclaimer</h4>
+  I tried to reproduce the results from Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks <a href="https://junyanz.github.io/CycleGAN/">(project link)</a>. I had no contribution over the original paper, all I did was to recreate the same results from the paper.
+
 
 <h2 id="more-information">Introduction</h2>
 
