--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -97,6 +97,12 @@ table, th, td {
   <h1>Human joint Pose Estimator</h1>
  
 
+<p><br /></p>
+
+  <h4>Disclaimer</h4>
+  I tried to reproduce the results from Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks <a href="https://junyanz.github.io/CycleGAN/">(project link)</a>. I had no contribution over the original paper, all I did was to recreate the same results from the paper.
+
+<p><br /></p>
 
 
 <p> In data science, anomaly detection is when the system tries to detect a rare item, event or observation which deviates significantly from the original distribution and can not be defined as normal behaviour. Three different categories of anomaly detection exist:</p>
