--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -97,8 +97,12 @@ table, th, td {
     
   <h1>Multi-Scale image segmentation</h1>
  
-   <h4>Disclaimer</h4>
-  I tried to reproduce the results from Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks <a href="https://junyanz.github.io/CycleGAN/">(project link)</a>. I had no contribution over the original paper, all I did was to recreate the same results from the paper.
+  <p><br /></p>
+
+  <h4>Disclaimer</h4>
+  I tried to reproduce the results from Hierarchical Multi-Scale Attention for Semantic Segmentation <a href="https://arxiv.org/abs/2005.10821">(paper link)</a>. I had no contribution over the original paper, all I did was to recreate the same results from the paper.
+
+<p><br /></p>
 
 
 <h2 id="more-information">Introduction</h2>
