--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -122,24 +122,19 @@ labeled for semantic understanding.
 
 <table style="width:100%" id="table1">
   <tr>
-    <td>LAYER TYPE</td>
-    <td>IN</td>
-    <td>OUT</td>
-    <td>KERNEL</td>
-    <td>STRIDE</td>
+    <td>Group</td>
+    <td>Classes</td>
+ 
   </tr>
   <tr>
-    <td>CONV2D</td>
-    <td>3</td>
-    <td>3</td>
-    <td>4</td>
-    <td>2</td>
-  </tr>
-  <tr>
+    <td>Flat</td>
+    <td>road, sidewalk,parking,rail track
+</td>
+    
+
+<tr>
     <td>BATCHNORM2D, LEAKYRELU</td>
     <td>3</td>
-    <td></td>
-    <td></td>
     <td></td>
   </tr>
 
