--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -129,14 +129,23 @@ labeled for semantic understanding.
   <tr>
     <td>Flat</td>
     <td>road, sidewalk,parking,rail track
-</td>
+  </td>
     
-
-<tr>
-    <td>BATCHNORM2D, LEAKYRELU</td>
-    <td>3</td>
-    <td></td>
+  <tr>
+    <td>Human</td>
+    <td>person, rider</td>
   </tr>
+
+  <tr>
+    <td>Vehicle</td>
+    <td>car, truck,bus, on rails, motor cycle</td>
+  </tr>
+
+  <tr>
+    <td>Construction</td>
+    <td>building, wall,fense, guard rail, bridge</td>
+  </tr>
+
 
 </table>
 <center > Table 1</center>
