--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -143,9 +143,28 @@ labeled for semantic understanding.
 
   <tr>
     <td>Construction</td>
-    <td>building, wall,fense, guard rail, bridge</td>
+    <td>building, wall,fense, guard rail, caravan, bridge</td>
   </tr>
 
+  <tr>
+    <td>Object</td>
+    <td>pole, pole group, traffic sign, traffic light</td>
+  </tr>
+
+  <tr>
+    <td>Nature</td>
+    <td>vegetation, terrain</td>
+  </tr>
+
+  <tr>
+    <td>Sky</td>
+    <td>sky</td>
+  </tr>
+
+  <tr>
+    <td>void</td>
+    <td>ground, dynamic, static</td>
+  </tr>
 
 </table>
 <center > Table 1</center>
