--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -116,8 +116,9 @@ table, th, td {
 <h2 id="more-information">3. Dataset</h2>
 
 The dataset that we were using in the following project was the <a href="https://www.cityscapes-dataset.com/">Cityscapes</a> dataset, which was
-labeled for semantic understanding.
+labeled for semantic understanding. But we did not need the entire dataset since image segmentation was our only objective.
 
+<h4 id="more-information">3.1 Class Definitions</h4>
 
 
 <table style="width:100%" id="table1">
