--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -204,13 +204,32 @@ In the beginning, our ultimate goal was to build up two-stage and three-stage hi
   <tr>
     <td>Trunk</td>
     <td>Segmentation Block</td>
-    <td>Segmentation Block</td>
     <td>Image Scale</td>
+    <td>#Epochs</td>
+    <td>Mean IOU</td>
+    <td>Average Accuracy</td>
   </tr>
+
+
   <tr>
-    <td>Flat</td>
-    <td>road, sidewalk,parking,rail track
-  </td>
+    <td>MobileNet</td>
+    <td>DeepLab V3+</td>
+    <td>0.5</td>
+    <td>7</td>
+    <td>51.4%</td>
+    <td>71.3%</td>
+  </tr>
+
+  <tr>
+    <td>MobileNet</td>
+    <td>DeepLab V3+</td>
+    <td>1</td>
+    <td>7</td>
+    <td>50.6%</td>
+    <td>68.7%</td>
+  </tr>
+
+
     
 
 
