--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -229,6 +229,41 @@ In the beginning, our ultimate goal was to build up two-stage and three-stage hi
     <td>68.7%</td>
   </tr>
 
+  <tr>
+    <td>MobileNet</td>
+    <td>DeepLab V3+</td>
+    <td>2</td>
+    <td>5</td>
+    <td>50.3%/td>
+    <td>68.2%</td>
+  </tr>
+
+  <tr>
+    <td>ResNet</td>
+    <td>DeepLab V3+</td>
+    <td>0.5</td>
+    <td>6</td>
+    <td>50.1%</td>
+    <td>68.4%</td>
+  </tr>
+
+  <tr>
+    <td>ResNet</td>
+    <td>DeepLab V3+</td>
+    <td>1</td>
+    <td>6</td>
+    <td>48.0%</td>
+    <td>76.3%</td>
+  </tr>
+
+    <tr>
+    <td>ResNet</td>
+    <td>DeepLab V3+</td>
+    <td>2</td>
+    <td>5</td>
+    <td>49.0%</td>
+    <td>68.1%</td>
+  </tr>
 
     
 
