--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -113,7 +113,7 @@ table, th, td {
 
 <h2 id="more-information">2. Architect</h2>
 
-<a href="#figure1">Figure 1</a> belonging to the original paper, shows the architect of the entire model.
+<a href="#figure1">Figure 1</a> belonging to the <a href="https://arxiv.org/abs/2005.10821">original paper</a>, shows the architect of the entire model.
 <div style="align: left; text-align:center;">
     <img src="/assets/img/SegPaper.PNG" width="80%" height="auto" />
     <div class="caption" id="figure1" >Figure 1: Image from original paper</div>
@@ -136,6 +136,10 @@ The dataset that we were using in the following project was the <a href="https:/
 labeled for semantic understanding. But we did not need the entire dataset since image segmentation was our only objective.
 <h4 id="more-information">3.1 Data samples</h4>
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/City.PNG" width="80%" height="auto" />
+    <div class="caption" id="figure1" >Figure 1: Image from original paper</div>
+</div>
 
 <h4 id="more-information">3.2 Class Definitions</h4>
 
