--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -119,6 +119,11 @@ table, th, td {
     <div class="caption" id="figure1" >Figure 1: Image from original paper</div>
 </div>
 
+Trunk: One of the key parts in the architect of the model was the structure of the trunk. There were
+several network models for this part of the network, we used 𝑅𝑒𝑠𝑁𝑒𝑡 50, 𝑅𝑒𝑠𝑁𝑒𝑡 101 , and
+𝑀𝑜𝑏𝑖𝑙𝑒𝑁𝑒𝑡 for this part on the network.
+
+
 <h4 id="more-information">2.1 Model components</h4>
 
 <ul>
@@ -129,6 +134,9 @@ table, th, td {
   <li>Auxiliary semantic head: (1𝑥1 𝑐𝑜𝑛𝑣) → (𝐵𝑁) → (𝑅𝑒𝐿𝑈) → (1𝑥1 𝑐𝑜𝑛𝑣)</li>
 </ul>
 
+
+
+Segmentation:
 
 <h2 id="more-information">3. Dataset</h2>
 
