--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -211,6 +211,11 @@ In the beginning, our ultimate goal was to build up two-stage and three-stage hi
 
 <h2 id="more-information">5. Results</h2>
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/SegRes.PNG" width="80%" height="auto" />
+    <div class="caption" id="figure2" >Figure 2</div>
+</div>
+
 
 <table style="width:100%" id="table1">
   <tr>
