--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -130,7 +130,7 @@ several network models for this part of the network, we used ResNet50, ResNet101
 <p>
 Segmentation: One of the other key parts of the network was the segmentation part of the model, wherein the following paper hasn't clearly mentioned what kind of segmentation model they have used, so we tried DeepLab V3 and DeepLeab V3 + for the segmentation part, in the following we are going to give some information about this two networks.
   
-  
+
 </p>
 
 <h4 id="more-information">2.1 Model components</h4>
@@ -153,9 +153,10 @@ The dataset that we were using in the following project was the <a href="https:/
 labeled for semantic understanding. But we did not need the entire dataset since image segmentation was our only objective.
 <h4 id="more-information">3.1 Data samples</h4>
 
+<a href="#figure2">Figure 2</a> shows a sample ground image and it's segment map.
 <div style="align: left; text-align:center;">
     <img src="/assets/img/City.PNG" width="80%" height="auto" />
-    <div class="caption" id="figure1" >Figure 1: Image from original paper</div>
+    <div class="caption" id="figure2" >Figure 2</div>
 </div>
 
 <h4 id="more-information">3.2 Class Definitions</h4>
@@ -223,7 +224,7 @@ In the beginning, our ultimate goal was to build up two-stage and three-stage hi
 Since
 <div style="align: left; text-align:center;">
     <img src="/assets/img/SegRes.PNG" width="80%" height="auto" />
-    <div class="caption" id="figure2" >Figure 2</div>
+    <div class="caption" id="figure3" >Figure 3</div>
 </div>
 
 
