--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -120,18 +120,14 @@ table, th, td {
 </div>
 
 
-<p> 
+<ul>
+  <li>Trunk: One of the key parts in the architect of the model was the structure of the trunk. There were
+several network models for this part of the network, we used ResNet50, ResNet101, and MobileNet for this part on the network.</li>
+  <li>Segmentation: One of the other key parts of the network was the segmentation part of the model, wherein the following paper hasn't clearly mentioned what kind of segmentation model they have used, so we tried DeepLab V3 and DeepLeab V3 + for the segmentation part, in the following we are going to give some information about this two networks.
+   </li>
 
-Trunk: One of the key parts in the architect of the model was the structure of the trunk. There were
-several network models for this part of the network, we used ResNet50, ResNet101, and MobileNet for this part on the network.
+</ul>
 
-</p>
-
-<p>
-Segmentation: One of the other key parts of the network was the segmentation part of the model, wherein the following paper hasn't clearly mentioned what kind of segmentation model they have used, so we tried DeepLab V3 and DeepLeab V3 + for the segmentation part, in the following we are going to give some information about this two networks.
-  
-
-</p>
 
 <h4 id="more-information">2.1 Model components</h4>
 
