--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -224,7 +224,9 @@ Since the entire was huge, we weren't able to train this model in an end-to-end 
 </div>
 
 
-<table style="width:100%" id="table1">
+<a href="#table2">Table 2</a> shows the result for different architectures.
+
+<table style="width:100%" id="table2">
   <tr>
     <td>Trunk</td>
     <td>Segmentation Block</td>
