--- a/projects/Deep-Learning-Course/Multi-scale/index.html
+++ b/projects/Deep-Learning-Course/Multi-scale/index.html
@@ -244,7 +244,7 @@ Since the entire was huge, we weren't able to train this model in an end-to-end 
     <td>DeepLab V3+</td>
     <td>0.5</td>
     <td>7</td>
-    <td>51.4%</td>
+    <td><strong>51.4%</strong></td>
     <td>71.3%</td>
   </tr>
 
@@ -281,7 +281,7 @@ Since the entire was huge, we weren't able to train this model in an end-to-end 
     <td>1</td>
     <td>6</td>
     <td>48.0%</td>
-    <td>76.3%</td>
+    <td><strong>76.3%</strong></td>
   </tr>
 
     <tr>
