--- a/projects/index.html
+++ b/projects/index.html
@@ -176,7 +176,7 @@
           <img class="card-img-top" src="/assets/img/Segment.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Multi-Scale image segmentation</h5>
-            <p class="card-text">Image segmentation using hierarchical mutli-scale attention model.(paper reproduction)</p>
+            <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/Final%20Project" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data</a>
