--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -105,9 +105,14 @@ table, th, td {
 <p><br /></p>
 
 
-<p> 
 
-</p>
+<h2 id="more-information">1. Introduction</h2>
+
+<p> Pose estimation is a computer vision task that infers the pose of a person or object in an mage or video. We can also think of pose estimation as the problem of determining the position and orientation of a camera relative to a given person or object.
+
+This is typically done by identifying, locating, and tracking a number of keypoints on a given object or person. For objects, this could be corners or other significant features. And for humans, these keypoints represent major joints like an elbow or knee.
+
+The goal of our machine learning models are to track these keypoints in images and videos..</p>
 
 
 <h2 id="more-information">More infomation</h2>
