--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
         <div class="row ml-1 ml-sm-0">
           <span class="contact-icon text-center" style="line-height: 1em;">
-            <a href="mailto:aminfadaeinejad.edu@gmail.com"><i class="fa fa-envelope-square gm-icon"></i></a>
+            <a href="mailto:aminfadaeinejad.edu-at-gmail.com"><i class="fa fa-envelope-square gm-icon"></i></a>
             <!--<a href="https://scholar.google.com/citations?userid=UcT4CXoAAAAJ&user=UcT4CXoAAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square gs-icon"></i></a> -->
             <a href="https://github.com/aminfadaei116" target="_blank" title="GitHub"><i class="fab fa-github-square gh-icon"></i></a>
             <a href="https://www.linkedin.com/in/amin-fadaeinejad/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin li-icon"></i></a>
