--- a/teaching/index.html
+++ b/teaching/index.html
@@ -99,6 +99,23 @@
 
 
 <h3 class="mt-4"><nobr><em>York University</nobr></h3>
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold">Mission-Critical Systems</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        
+      </div>
+    </div>
+    <h6 class=" mt-2 mt-sm-0">Winter 2023: Teaching Assistant</h6>
+
+  </div>
+</div>
+
+
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
@@ -109,6 +126,7 @@
       
       </div>
     </div>
+    <h6 class="mt-2 mt-sm-0">Winter 2023: Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0">Fall 2022: Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0">Winter 2022: Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0">Fall 2021: Teaching Assistant</h6>
