--- a/cv/index.html
+++ b/cv/index.html
@@ -571,7 +571,7 @@
 		</div>
 	
 		<div class="card mt-3 p-3">
-			<h3 class="card-title">Other Work Experience</h3>
+			<h3 class="card-title">Community Leadership</h3>
 			<div>
 			
 				<ul class="card-text font-weight-light list-group list-group-flush">
@@ -1300,7 +1300,7 @@ This part is for the certificates
                     <li class="list-group-item">
 						<div class="row">
 							
-								<div class="col-xs-2 cl-sm-2 col-md-auto text-left" style="width: 110px;">
+								<div class="col-xs-2 cl-sm-2 col-md-auto text-left" style="width: 130px;">
 									<span class="badge font-weight-bold light-green darken-1 text-uppercase align-middle" style="width: 130px;">
 										MAY 2017 - SEP 2017
 									</span>
