--- a/cv/index.html
+++ b/cv/index.html
@@ -380,7 +380,7 @@
 								
 								<div class="col-xs-2 cl-sm-2 col-md-auto text-left" style="width: 130px;">
 									<span class="badge font-weight-bold light-green darken-1 text-uppercase align-middle" style="width: 130px;">
-										Sep 2020 <br /> &amp; <br /> Aug 2021
+										Sep 2020 - Aug 2021
 									</span>
 								</div>
 							
