--- a/projects/index.html
+++ b/projects/index.html
@@ -217,7 +217,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://paperswithcode.com/dataset/lsp" target="_blank">Data </a>
-              
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Report_CA2.pdf" target="_blank">Report</a>
             </div>
           </div>
         </div>
